--- a/Client/wwwroot/html/Car.html
+++ b/Client/wwwroot/html/Car.html
@@ -83,7 +83,7 @@
                 }
             };
 
-            xmlhttp.open("GET", "http://localhost:54411/api/car", true);
+            xmlhttp.open("GET", "http://localhost:51863/car/getallcars", true);
             xmlhttp.send();
         }
     </script>
